--- a/section_01/01_exercises.ipynb
+++ b/section_01/01_exercises.ipynb
@@ -3,7 +3,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "_wqz9bVPe5zi"
+        "id": "dtGf9svQhiyp"
       },
       "source": [
         "#### <center>Intermediate Python and Software Enginnering</center>\n",
@@ -19,7 +19,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "oxhVntz8e5zt"
+        "id": "ZBUTFJslhiyr"
       },
       "source": [
         "# Exercises\n",
@@ -30,7 +30,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "q62Lbrewe5zx"
+        "id": "8tlbUbRkhiys"
       },
       "source": [
         "---\n",
@@ -41,7 +41,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "pi_E565Ve5zz"
+        "id": "vZi9ViQOhiys"
       },
       "source": [
         "The first concepts we discussed were types:"
@@ -49,10 +49,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 5,
       "metadata": {
-        "id": "tLCkIu9Xe5z1",
-        "outputId": "0b6b0ee7-e5f8-49f3-892e-ae676767fe53",
+        "id": "0mWOT4Gchiys",
+        "outputId": "a22576e0-cb88-4e5d-b9d8-13add81d85c7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -74,7 +74,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "K5DysXBVe50B"
+        "id": "rXjeVJRahiyu"
       },
       "source": [
         "The integer value `42` is numerically equivalent to the floating point value is represented as a different type. The type names `int` and `float` can be used to convert between types:"
@@ -82,23 +82,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
-        "id": "icrdagYFe50D",
-        "outputId": "848b6b94-7050-4fd1-fb06-3ce59490ec09",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "-v818lcKhiyu"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "42 42.0\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "fval=float(val)\n",
         "print(val,fval)"
@@ -107,7 +95,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "vnTrxcUGe50G"
+        "id": "4_VDUu0Nhiyu"
       },
       "source": [
         "The `type` function can be used to query the type of objects:"
@@ -115,23 +103,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
-        "id": "1L8x-vaZe50I",
-        "outputId": "610c2243-3711-4dbe-e103-8751cfc20d81",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "1dSJVg-Bhiyv"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "<class 'int'> <class 'float'>\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "print(type(val),type(fval))"
       ]
@@ -139,7 +115,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "BsgrusoWe50J"
+        "id": "A-33JVUQhiyv"
       },
       "source": [
         "The type names `int`, `float`, `str`, and others can be used to convert between values:"
@@ -147,23 +123,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
-        "id": "bQ3mH5QPe50L",
-        "outputId": "67165a95-4daf-4252-82f7-cb659e71ea41",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "A-_HfNRNhiyv"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "None <class 'str'> False\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# replace None with the string representation of `a` and assign a variable a\n",
         "astr = 'None'\n",
@@ -174,7 +138,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "NIDnGR9Ye50M"
+        "id": "P3ybAMKahiyw"
       },
       "source": [
         "### Exercise 1\n",
@@ -199,17 +163,18 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "0A7EIfene50N"
+        "id": "luxaZgo-hiyw"
       },
       "outputs": [],
       "source": [
-        "# your code here"
+        "# your code here\n",
+        "print()"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ewXo5zX-e50O"
+        "id": "ErVDWI93hiyw"
       },
       "source": [
         "---\n",
@@ -220,7 +185,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "3Rzydjhfe50O"
+        "id": "iv4vR_DWhiyw"
       },
       "source": [
         "How these different types produce different results when applied to numeric operators is important to understand.\n",
@@ -233,7 +198,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "6Laamr7xe50P"
+        "id": "LyZBU2i4hiyw"
       },
       "outputs": [],
       "source": [
@@ -247,7 +212,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "OJwQ4YQme50P"
+        "id": "IGr2gF35hiyw"
       },
       "source": [
         "Operators are provided for mathematics (`+ - * / // %`), comparison (`== != <= >= < >`) and others.\n",
@@ -260,7 +225,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "OUcydowpe50P"
+        "id": "XcL8uZ21hiyw"
       },
       "outputs": [],
       "source": [
@@ -270,7 +235,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "3zuy0532e50Q"
+        "id": "06HwFfKYhiyx"
       },
       "source": [
         "### Exercise 4:\n",
@@ -283,7 +248,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "DcEM6h1Je50R"
+        "id": "0iuPOYfNhiyx"
       },
       "outputs": [],
       "source": [
@@ -305,7 +270,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Ha9JGpqEe50R"
+        "id": "BKHpsHSFhiyx"
       },
       "source": [
         "---\n",
@@ -315,7 +280,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "fUEt_0hFe50S"
+        "id": "j7YgNMZQhiyx"
       },
       "source": [
         "We construct lists with the `list` operator or `[]` syntax. Similarly tuple can be constructed with `tuple` or `()`.\n",
@@ -328,7 +293,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "ONfJFCoqe50S"
+        "id": "jmVmM69lhiyx"
       },
       "outputs": [],
       "source": [
@@ -342,7 +307,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "glCzyIxle50T"
+        "id": "aVuqD9fzhiyx"
       },
       "source": [
         "Now do the equivalent operation with `names` as a tuple:"
@@ -352,7 +317,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "9_PcissAe50T"
+        "id": "u6yyxjKAhiyx"
       },
       "outputs": [],
       "source": [
@@ -365,7 +330,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "rLdsLv3ue50U"
+        "id": "vSxLMpF2hiyy"
       },
       "source": [
         "### Exercise 6:\n",
@@ -377,7 +342,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "yDYnEWz4e50U"
+        "id": "mC-MpRtEhiyy"
       },
       "outputs": [],
       "source": [
@@ -408,7 +373,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "NW29JWrye50V"
+        "id": "bEspi4A4hiyy"
       },
       "outputs": [],
       "source": [
@@ -420,7 +385,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "_XAWSTZSe50V"
+        "id": "exWzFNqihiyy"
       },
       "source": [
         "### Exercise 7:\n",
@@ -431,7 +396,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "zItRwtcie50W"
+        "id": "UAQkCbKFhiyy"
       },
       "outputs": [],
       "source": [
@@ -442,7 +407,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Iung3DYTe50W"
+        "id": "pZ7MMnFghiyy"
       },
       "source": [
         "Write code to implement the following:"
@@ -452,7 +417,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "HFDt_nSMe50W"
+        "id": "dMwnV3Vfhiyy"
       },
       "outputs": [],
       "source": [
@@ -465,7 +430,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "z7kIG1IMe50X"
+        "id": "dAxEp8A1hiyz"
       },
       "outputs": [],
       "source": [
@@ -478,7 +443,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "XVTSCnSve50X"
+        "id": "l0zqPLPMhiyz"
       },
       "outputs": [],
       "source": [
@@ -491,7 +456,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "brBASPdne50X"
+        "id": "F7IxsEtXhiyz"
       },
       "outputs": [],
       "source": [
@@ -503,7 +468,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "nEMVtDZ8e50Z"
+        "id": "jZ3UaJTchiyz"
       },
       "source": [
         "---\n",
@@ -513,7 +478,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "frU_WQHLe50a"
+        "id": "RCy4dyNFhiyz"
       },
       "source": [
         "* \"NumPy is a library for the Python programming language, adding support for large, multi-dimensional arrays and matrices, along with a large collection of high-level mathematical functions to operate on these arrays.\"\n",
@@ -528,7 +493,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "uQi97bCTe50a"
+        "id": "bp5r1hG_hiyz"
       },
       "outputs": [],
       "source": [
@@ -545,7 +510,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "l0XNBFMfe50a"
+        "id": "COSW-ztZhiyz"
       },
       "source": [
         "Packages like NumPy have their own datatype, typical example being `numpy.ndarray`, which encodes a n-Dimentionnal array and can be used in mathematical function, such as:"
@@ -555,7 +520,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "G2KCvYZpe50p"
+        "id": "YJ4qOVmhhiy0"
       },
       "outputs": [],
       "source": [
@@ -569,7 +534,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "wJrv0icQe50p"
+        "id": "jgux2hyUhiy0"
       },
       "source": [
         "The `numpy.arange` function enables to create an array, given a starting value, a limit and an increment:"
@@ -579,7 +544,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "AIysDgEwe50q"
+        "id": "rZspoAJ4hiy0"
       },
       "outputs": [],
       "source": [
@@ -592,7 +557,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "qJUdE95ze50q"
+        "id": "SOeHEJr1hiy0"
       },
       "source": [
         "Matplotlib also needs to be imported"
@@ -602,7 +567,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "wwmF7vdde50r"
+        "id": "xp5LV9wXhiy0"
       },
       "outputs": [],
       "source": [
@@ -620,7 +585,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "XyB5cdmZe50r"
+        "id": "MXWCH895hiy0"
       },
       "source": [
         "### Exercise 8:\n",
@@ -631,7 +596,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "vaM7KkaCe50s"
+        "id": "EZMD0_8ohiy1"
       },
       "outputs": [],
       "source": []
@@ -639,7 +604,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "AZHjyO4Ye50s"
+        "id": "Ueuk6uLOhiy1"
       },
       "source": [
         "---\n",
@@ -649,7 +614,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "IxCIOeW9e50t"
+        "id": "vVxajr5Hhiy1"
       },
       "source": [
         "Conditionals in Python take the form of `if-elif-else` code blocks. The condition checks to see if the given expression evaluates to `True` and executes the block if this is so, otherwise it checks the next `elif` block or `else` block.\n",
@@ -662,7 +627,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "J5P-cj9he50t"
+        "id": "ItMyGdruhiy1"
       },
       "outputs": [],
       "source": [
@@ -674,7 +639,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "AdyOH51ke50t"
+        "id": "R3wlOGqAhiy1"
       },
       "source": [
         "The `for` loop can be used to iterate over the members of a collection such as a list or tuple."
@@ -684,7 +649,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "dluNQfyGe50u"
+        "id": "QMUQ-j4Shiy1"
       },
       "outputs": [],
       "source": [
@@ -696,7 +661,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "kSxX5tCCe50u"
+        "id": "sy9eTW2uhiy1"
       },
       "source": [
         "---\n",
@@ -706,7 +671,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "HIllhu2oe50u"
+        "id": "pWVoIf5-hiy1"
       },
       "source": [
         "Routines are defined starting with the `def` keyword, the name of the routine, its arguments, then its body.\n",
@@ -719,7 +684,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "hdbsW1fEe50v"
+        "id": "0AJ2imRnhiy1"
       },
       "outputs": [],
       "source": [
@@ -732,7 +697,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "Gxk4C2b-e50w"
+        "id": "yPRSDT8Fhiy2"
       },
       "outputs": [],
       "source": [
@@ -747,7 +712,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "1jZKaMWje50w"
+        "id": "0qsRQ_9Khiy2"
       },
       "source": [
         "---\n",
@@ -757,7 +722,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "8ob1Dyhce50w"
+        "id": "xDxx66mThiy2"
       },
       "source": [
         "### Exercise 11:\n",
@@ -768,7 +733,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "rjgRrmuMe50x"
+        "id": "PkPvKSvshiy2"
       },
       "outputs": [],
       "source": [
@@ -783,7 +748,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "8rlFY01De50y"
+        "id": "29E1GOEahiy2"
       },
       "source": [
         "### Exercise 11:\n",
@@ -796,7 +761,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "HOXUIZXKe50z"
+        "id": "CT29TEmphiy2"
       },
       "outputs": [],
       "source": [
@@ -814,7 +779,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "m-FkZjmye500"
+        "id": "nMSHf5jXhiy2"
       },
       "source": [
         "---\n",
@@ -824,7 +789,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "OMP52mCje500"
+        "id": "obzerx8hhiy2"
       },
       "source": [
         "Recall the `Dimension` type from the lecture notes:"
@@ -834,7 +799,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "vT7ljxi0e500"
+        "id": "3r2R8o8ehiy3"
       },
       "outputs": [],
       "source": [
@@ -850,7 +815,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "gVi4Jm2Ze501"
+        "id": "8X7SxjFehiy3"
       },
       "source": [
         "### Exercise 12:\n",
@@ -861,7 +826,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "Wel3tPmBe502"
+        "id": "Hgufeu9Xhiy3"
       },
       "outputs": [],
       "source": []
@@ -870,7 +835,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "LrxvtkzRe503"
+        "id": "NVHYXPO_hiy3"
       },
       "outputs": [],
       "source": [
@@ -885,7 +850,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "cHMSE78Ve504"
+        "id": "8asdUAtmhiy3"
       },
       "source": [
         "---\n",
@@ -895,7 +860,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "bD_f6N8Be504"
+        "id": "Duw3fB65hiy3"
       },
       "source": [
         "### Exercise 13:\n",
@@ -908,7 +873,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "3GLRTxwie505"
+        "id": "LN7KlWaxhiy3"
       },
       "outputs": [],
       "source": [
@@ -923,7 +888,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "yqAWoZrNe505"
+        "id": "_ZLCLy5Chiy4"
       },
       "source": [
         "### Exercise 14:\n",
@@ -940,7 +905,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "nMMfbow5e506"
+        "id": "i3nSsmi1hiy4"
       },
       "outputs": [],
       "source": [
@@ -955,7 +920,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "H9YLaiTJe506"
+        "id": "JbukBd7Hhiy4"
       },
       "source": [
         "### Exercise 15:\n",
@@ -966,7 +931,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "w3BKXle2e506"
+        "id": "yi5PlyZ9hiy4"
       },
       "outputs": [],
       "source": [
@@ -988,7 +953,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "K8jWI6YDe507"
+        "id": "2WNqyOcKhiy4"
       },
       "source": [
         "### Exercise 16:\n",
@@ -999,7 +964,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "eYLrtmIye508"
+        "id": "DWhh_NHMhiy4"
       },
       "outputs": [],
       "source": [
@@ -1019,7 +984,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "G9J6ccBBe508"
+        "id": "tc5Y4-ckhiy5"
       },
       "outputs": [],
       "source": []
